src/Language/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.0.2 from src/Language/Parser.y
-----------------------------------------------------------------------------


terminal '.' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseProgramTokens -> Program               (0)
	%start_parseTermTokens -> Term                     (1)
	%start_parseRuleTokens -> Rule                     (2)
	%start_parseGoalTokens -> Goal                     (3)
	Program -> ProgramElements                         (4)
	ProgramElements ->                                 (5)
	ProgramElements -> ProgramElement ProgramElements   (6)
	ProgramElement -> Declaration ';'                  (7)
	ProgramElement -> HaskellBlock                     (8)
	ProgramElement -> HaskellPost                      (9)
	Declaration -> SyntaxBlock                         (10)
	Declaration -> RulesBlock                          (11)
	Declaration -> LatexBlock                          (12)
	Declaration -> TransitionDecl                      (13)
	Declaration -> RewriteRule                         (14)
	Declaration -> ImportDecl                          (15)
	Declaration -> RewriteType                         (16)
	RewriteType -> ':' IDENT '(' TermArgs ')' '=>' Term   (17)
	SyntaxBlock -> 'syntax' '{' SyntaxDecls '}'        (18)
	SyntaxBlock -> 'syntax' IDENT '{' SyntaxDecls '}'   (19)
	SyntaxDecls ->                                     (20)
	SyntaxDecls -> SyntaxDecl ';' SyntaxDecls          (21)
	SyntaxDecl -> 'alias' TypeRef 'as' IDENT           (22)
	SyntaxDecl -> TypeRef MaybeProductions             (23)
	SyntaxDecl -> IdentList 'in' TypeRef MaybeProductions   (24)
	TypeRef -> IDENT                                   (25)
	TypeRef -> IDENT '(' TypeRefs ')'                  (26)
	TypeRef -> HASKEXPR                                (27)
	TypeRefs ->                                        (28)
	TypeRefs -> TypeRef                                (29)
	TypeRefs -> TypeRef ',' TypeRefs                   (30)
	IdentList -> IDENT                                 (31)
	IdentList -> IDENT ',' IdentList                   (32)
	MaybeProductions ->                                (33)
	MaybeProductions -> '::=' Productions              (34)
	Productions -> Term                                (35)
	Productions -> Term '|' Productions                (36)
	RulesBlock -> 'rules' '{' Rules '}'                (37)
	RulesBlock -> 'rules' IDENT '{' Rules '}'          (38)
	Rules ->                                           (39)
	Rules -> Rule ';' Rules                            (40)
	Rule -> 'rule' STRING '[' Goals ']' '=>' '[' TermList ']'   (41)
	Goals ->                                           (42)
	Goals -> Goal                                      (43)
	Goals -> Goal ';' Goals                            (44)
	TermList ->                                        (45)
	TermList -> Terms                                  (46)
	Terms -> Term                                      (47)
	Terms -> Term ';' Terms                            (48)
	LatexBlock -> 'latex' '{' LatexRules '}'           (49)
	LatexRules ->                                      (50)
	LatexRules -> LatexRule ';' LatexRules             (51)
	LatexRule -> Term '=>' LatexTemplate               (52)
	LatexTemplate ->                                   (53)
	LatexTemplate -> LatexTemplateElement ',' LatexTemplate   (54)
	LatexTemplate -> LatexTemplateElement              (55)
	LatexTemplateElement -> STRING                     (56)
	LatexTemplateElement -> IDENT                      (57)
	TransitionDecl -> 'transition' IDENT '~>' IDENT    (58)
	RewriteRule -> IDENT '(' TermArgs ')' '=' Term     (59)
	ImportDecl -> 'import' STRING                      (60)
	TermArgs ->                                        (61)
	TermArgs -> TermArgList                            (62)
	TermArgList -> Term                                (63)
	TermArgList -> Term ',' TermArgList                (64)
	HaskellBlock -> HASKBLOCK                          (65)
	HaskellPost -> HASKPOST                            (66)
	Term -> BasicTerm                                  (67)
	Term -> Term '~>' Term                             (68)
	Term -> BigStepExpr                                (69)
	Term -> '{' Elements '}'                           (70)
	BigStepExpr -> '(' Elements ')' '⇓' '(' Elements ')'   (71)
	Expr -> '[' Bindings ']'                           (72)
	Expr -> BasicTerm '[' Bindings ']'                 (73)
	Expr -> '(' Term 'union' Term ')'                  (74)
	Bindings ->                                        (75)
	Bindings -> Binding                                (76)
	Bindings -> Binding ';' Bindings                   (77)
	Binding -> Term '|->' Term                         (78)
	Elements ->                                        (79)
	Elements -> Term                                   (80)
	Elements -> Term ',' Elements                      (81)
	BasicTerm -> IDENT                                 (82)
	BasicTerm -> IDENT '(' TermArgs ')'                (83)
	BasicTerm -> HASKEXPR                              (84)
	BasicTerm -> INTLIT                                (85)
	BasicTerm -> BOOL                                  (86)
	BasicTerm -> '_'                                   (87)
	BasicTerm -> STRING                                (88)
	BasicTerm -> Expr                                  (89)
	Goal -> Term                                       (90)
	Goal -> IDENT 'in' Term                            (91)
	Goal -> Term '=' Term                              (92)
	Goal -> Term '/=' Term                             (93)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'::='          { TokenWithRange IsDefinedAs _ }
	'~>'           { TokenWithRange LeadsTo _ }
	'=>'           { TokenWithRange Implies _ }
	'='            { TokenWithRange Equal _ }
	'/='           { TokenWithRange NotEqual _ }
	'⇓'            { TokenWithRange BigStep _ }
	'rules'        { TokenWithRange Rules _ }
	'rule'         { TokenWithRange Rule _ }
	'latex'        { TokenWithRange Token.Latex _ }
	BOOL           { TokenWithRange (Boo _) _ }
	'syntax'       { TokenWithRange (Ident "syntax") _ }
	'in'           { TokenWithRange (Ident "in") _ }
	'transition'   { TokenWithRange (Ident "transition") _ }
	'import'       { TokenWithRange (Ident "import") _ }
	'alias'        { TokenWithRange (Ident "alias") _ }
	'as'           { TokenWithRange (Ident "as") _ }
	'('            { TokenWithRange Lpar _ }
	')'            { TokenWithRange Rpar _ }
	'{'            { TokenWithRange LCBa _ }
	'}'            { TokenWithRange RCBa _ }
	'['            { TokenWithRange LBra _ }
	']'            { TokenWithRange RBra _ }
	','            { TokenWithRange Comma _ }
	'.'            { TokenWithRange Dot _ }
	';'            { TokenWithRange Sem _ }
	':'            { TokenWithRange Colon _ }
	'|'            { TokenWithRange Bar _ }
	'|->'          { TokenWithRange MapsTo _ }
	'_'            { TokenWithRange Token.Wildcard _ }
	'union'        { TokenWithRange Token.Union _ }
	IDENT          { TokenWithRange (Ident _) _ }
	STRING         { TokenWithRange (Quo _) _ }
	INTLIT         { TokenWithRange (IntLit _) _ }
	HASKEXPR       { TokenWithRange (Token.HaskellExpr _) _ }
	HASKBLOCK      { TokenWithRange (Token.Hask _) _ }
	HASKPOST       { TokenWithRange (Token.HaskPost _) _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseProgramTokens rule  0
	%start_parseTermTokens rule  1
	%start_parseRuleTokens rule  2
	%start_parseGoalTokens rule  3
	Program         rule  4
	ProgramElements rules 5, 6
	ProgramElement  rules 7, 8, 9
	Declaration     rules 10, 11, 12, 13, 14, 15, 16
	RewriteType     rule  17
	SyntaxBlock     rules 18, 19
	SyntaxDecls     rules 20, 21
	SyntaxDecl      rules 22, 23, 24
	TypeRef         rules 25, 26, 27
	TypeRefs        rules 28, 29, 30
	IdentList       rules 31, 32
	MaybeProductions rules 33, 34
	Productions     rules 35, 36
	RulesBlock      rules 37, 38
	Rules           rules 39, 40
	Rule            rule  41
	Goals           rules 42, 43, 44
	TermList        rules 45, 46
	Terms           rules 47, 48
	LatexBlock      rule  49
	LatexRules      rules 50, 51
	LatexRule       rule  52
	LatexTemplate   rules 53, 54, 55
	LatexTemplateElement rules 56, 57
	TransitionDecl  rule  58
	RewriteRule     rule  59
	ImportDecl      rule  60
	TermArgs        rules 61, 62
	TermArgList     rules 63, 64
	HaskellBlock    rule  65
	HaskellPost     rule  66
	Term            rules 67, 68, 69, 70
	BigStepExpr     rule  71
	Expr            rules 72, 73, 74
	Bindings        rules 75, 76, 77
	Binding         rule  78
	Elements        rules 79, 80, 81
	BasicTerm       rules 82, 83, 84, 85, 86, 87, 88, 89
	Goal            rules 90, 91, 92, 93

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseProgramTokens -> . Program              (rule 0)

	'rules'        shift, and enter state 17
	'latex'        shift, and enter state 18
	'syntax'       shift, and enter state 19
	'transition'   shift, and enter state 20
	'import'       shift, and enter state 21
	':'            shift, and enter state 22
	IDENT          shift, and enter state 23
	HASKBLOCK      shift, and enter state 24
	HASKPOST       shift, and enter state 25
	%eof           reduce using rule 5

	Program        goto state 44
	ProgramElementsgoto state 5
	ProgramElement goto state 6
	Declaration    goto state 7
	RewriteType    goto state 8
	SyntaxBlock    goto state 9
	RulesBlock     goto state 10
	LatexBlock     goto state 11
	TransitionDecl goto state 12
	RewriteRule    goto state 13
	ImportDecl     goto state 14
	HaskellBlock   goto state 15
	HaskellPost    goto state 16

State 1

	%start_parseTermTokens -> . Term                    (rule 1)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 42
	BigStepExpr    goto state 27
	Expr           goto state 28
	BasicTerm      goto state 29

State 2

	%start_parseRuleTokens -> . Rule                    (rule 2)

	'rule'         shift, and enter state 41

	Rule           goto state 40

State 3

	%start_parseGoalTokens -> . Goal                    (rule 3)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 36
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 26
	BigStepExpr    goto state 27
	Expr           goto state 28
	BasicTerm      goto state 29
	Goal           goto state 30

State 4

	Program -> . ProgramElements                        (rule 4)

	'rules'        shift, and enter state 17
	'latex'        shift, and enter state 18
	'syntax'       shift, and enter state 19
	'transition'   shift, and enter state 20
	'import'       shift, and enter state 21
	':'            shift, and enter state 22
	IDENT          shift, and enter state 23
	HASKBLOCK      shift, and enter state 24
	HASKPOST       shift, and enter state 25

	ProgramElementsgoto state 5
	ProgramElement goto state 6
	Declaration    goto state 7
	RewriteType    goto state 8
	SyntaxBlock    goto state 9
	RulesBlock     goto state 10
	LatexBlock     goto state 11
	TransitionDecl goto state 12
	RewriteRule    goto state 13
	ImportDecl     goto state 14
	HaskellBlock   goto state 15
	HaskellPost    goto state 16

State 5

	Program -> ProgramElements .                        (rule 4)

	%eof           reduce using rule 4


State 6

	ProgramElements -> ProgramElement . ProgramElements    (rule 6)

	'rules'        shift, and enter state 17
	'latex'        shift, and enter state 18
	'syntax'       shift, and enter state 19
	'transition'   shift, and enter state 20
	'import'       shift, and enter state 21
	':'            shift, and enter state 22
	IDENT          shift, and enter state 23
	HASKBLOCK      shift, and enter state 24
	HASKPOST       shift, and enter state 25
	%eof           reduce using rule 5

	ProgramElementsgoto state 69
	ProgramElement goto state 6
	Declaration    goto state 7
	RewriteType    goto state 8
	SyntaxBlock    goto state 9
	RulesBlock     goto state 10
	LatexBlock     goto state 11
	TransitionDecl goto state 12
	RewriteRule    goto state 13
	ImportDecl     goto state 14
	HaskellBlock   goto state 15
	HaskellPost    goto state 16

State 7

	ProgramElement -> Declaration . ';'                 (rule 7)

	';'            shift, and enter state 68


State 8

	Declaration -> RewriteType .                        (rule 16)

	';'            reduce using rule 16


State 9

	Declaration -> SyntaxBlock .                        (rule 10)

	';'            reduce using rule 10


State 10

	Declaration -> RulesBlock .                         (rule 11)

	';'            reduce using rule 11


State 11

	Declaration -> LatexBlock .                         (rule 12)

	';'            reduce using rule 12


State 12

	Declaration -> TransitionDecl .                     (rule 13)

	';'            reduce using rule 13


State 13

	Declaration -> RewriteRule .                        (rule 14)

	';'            reduce using rule 14


State 14

	Declaration -> ImportDecl .                         (rule 15)

	';'            reduce using rule 15


State 15

	ProgramElement -> HaskellBlock .                    (rule 8)

	'rules'        reduce using rule 8
	'latex'        reduce using rule 8
	'syntax'       reduce using rule 8
	'transition'   reduce using rule 8
	'import'       reduce using rule 8
	':'            reduce using rule 8
	IDENT          reduce using rule 8
	HASKBLOCK      reduce using rule 8
	HASKPOST       reduce using rule 8
	%eof           reduce using rule 8


State 16

	ProgramElement -> HaskellPost .                     (rule 9)

	'rules'        reduce using rule 9
	'latex'        reduce using rule 9
	'syntax'       reduce using rule 9
	'transition'   reduce using rule 9
	'import'       reduce using rule 9
	':'            reduce using rule 9
	IDENT          reduce using rule 9
	HASKBLOCK      reduce using rule 9
	HASKPOST       reduce using rule 9
	%eof           reduce using rule 9


State 17

	RulesBlock -> 'rules' . '{' Rules '}'               (rule 37)
	RulesBlock -> 'rules' . IDENT '{' Rules '}'         (rule 38)

	'{'            shift, and enter state 66
	IDENT          shift, and enter state 67


State 18

	LatexBlock -> 'latex' . '{' LatexRules '}'          (rule 49)

	'{'            shift, and enter state 65


State 19

	SyntaxBlock -> 'syntax' . '{' SyntaxDecls '}'       (rule 18)
	SyntaxBlock -> 'syntax' . IDENT '{' SyntaxDecls '}'    (rule 19)

	'{'            shift, and enter state 63
	IDENT          shift, and enter state 64


State 20

	TransitionDecl -> 'transition' . IDENT '~>' IDENT    (rule 58)

	IDENT          shift, and enter state 62


State 21

	ImportDecl -> 'import' . STRING                     (rule 60)

	STRING         shift, and enter state 61


State 22

	RewriteType -> ':' . IDENT '(' TermArgs ')' '=>' Term    (rule 17)

	IDENT          shift, and enter state 60


State 23

	RewriteRule -> IDENT . '(' TermArgs ')' '=' Term    (rule 59)

	'('            shift, and enter state 59


State 24

	HaskellBlock -> HASKBLOCK .                         (rule 65)

	'rules'        reduce using rule 65
	'latex'        reduce using rule 65
	'syntax'       reduce using rule 65
	'transition'   reduce using rule 65
	'import'       reduce using rule 65
	':'            reduce using rule 65
	IDENT          reduce using rule 65
	HASKBLOCK      reduce using rule 65
	HASKPOST       reduce using rule 65
	%eof           reduce using rule 65


State 25

	HaskellPost -> HASKPOST .                           (rule 66)

	'rules'        reduce using rule 66
	'latex'        reduce using rule 66
	'syntax'       reduce using rule 66
	'transition'   reduce using rule 66
	'import'       reduce using rule 66
	':'            reduce using rule 66
	IDENT          reduce using rule 66
	HASKBLOCK      reduce using rule 66
	HASKPOST       reduce using rule 66
	%eof           reduce using rule 66


State 26

	Term -> Term . '~>' Term                            (rule 68)
	Goal -> Term .                                      (rule 90)
	Goal -> Term . '=' Term                             (rule 92)
	Goal -> Term . '/=' Term                            (rule 93)

	'~>'           shift, and enter state 46
	'='            shift, and enter state 57
	'/='           shift, and enter state 58
	']'            reduce using rule 90
	';'            reduce using rule 90
	%eof           reduce using rule 90


State 27

	Term -> BigStepExpr .                               (rule 69)

	'~>'           reduce using rule 69
	'=>'           reduce using rule 69
	'='            reduce using rule 69
	'/='           reduce using rule 69
	')'            reduce using rule 69
	'}'            reduce using rule 69
	']'            reduce using rule 69
	','            reduce using rule 69
	';'            reduce using rule 69
	'|'            reduce using rule 69
	'|->'          reduce using rule 69
	'union'        reduce using rule 69
	%eof           reduce using rule 69


State 28

	BasicTerm -> Expr .                                 (rule 89)

	'~>'           reduce using rule 89
	'=>'           reduce using rule 89
	'='            reduce using rule 89
	'/='           reduce using rule 89
	')'            reduce using rule 89
	'}'            reduce using rule 89
	'['            reduce using rule 89
	']'            reduce using rule 89
	','            reduce using rule 89
	';'            reduce using rule 89
	'|'            reduce using rule 89
	'|->'          reduce using rule 89
	'union'        reduce using rule 89
	%eof           reduce using rule 89


State 29

	Term -> BasicTerm .                                 (rule 67)
	Expr -> BasicTerm . '[' Bindings ']'                (rule 73)

	'~>'           reduce using rule 67
	'=>'           reduce using rule 67
	'='            reduce using rule 67
	'/='           reduce using rule 67
	')'            reduce using rule 67
	'}'            reduce using rule 67
	'['            shift, and enter state 56
	']'            reduce using rule 67
	','            reduce using rule 67
	';'            reduce using rule 67
	'|'            reduce using rule 67
	'|->'          reduce using rule 67
	'union'        reduce using rule 67
	%eof           reduce using rule 67


State 30

	%start_parseGoalTokens -> Goal .                    (rule 3)

	%eof           accept


State 31

	BasicTerm -> BOOL .                                 (rule 86)

	'~>'           reduce using rule 86
	'=>'           reduce using rule 86
	'='            reduce using rule 86
	'/='           reduce using rule 86
	')'            reduce using rule 86
	'}'            reduce using rule 86
	'['            reduce using rule 86
	']'            reduce using rule 86
	','            reduce using rule 86
	';'            reduce using rule 86
	'|'            reduce using rule 86
	'|->'          reduce using rule 86
	'union'        reduce using rule 86
	%eof           reduce using rule 86


State 32

	BigStepExpr -> '(' . Elements ')' '⇓' '(' Elements ')'    (rule 71)
	Expr -> '(' . Term 'union' Term ')'                 (rule 74)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	')'            reduce using rule 79
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 54
	BigStepExpr    goto state 27
	Expr           goto state 28
	Elements       goto state 55
	BasicTerm      goto state 29

State 33

	Term -> '{' . Elements '}'                          (rule 70)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'}'            reduce using rule 79
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 52
	BigStepExpr    goto state 27
	Expr           goto state 28
	Elements       goto state 53
	BasicTerm      goto state 29

State 34

	Expr -> '[' . Bindings ']'                          (rule 72)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	']'            reduce using rule 75
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 49
	BigStepExpr    goto state 27
	Expr           goto state 28
	Bindings       goto state 50
	Binding        goto state 51
	BasicTerm      goto state 29

State 35

	BasicTerm -> '_' .                                  (rule 87)

	'~>'           reduce using rule 87
	'=>'           reduce using rule 87
	'='            reduce using rule 87
	'/='           reduce using rule 87
	')'            reduce using rule 87
	'}'            reduce using rule 87
	'['            reduce using rule 87
	']'            reduce using rule 87
	','            reduce using rule 87
	';'            reduce using rule 87
	'|'            reduce using rule 87
	'|->'          reduce using rule 87
	'union'        reduce using rule 87
	%eof           reduce using rule 87


State 36

	BasicTerm -> IDENT .                                (rule 82)
	BasicTerm -> IDENT . '(' TermArgs ')'               (rule 83)
	Goal -> IDENT . 'in' Term                           (rule 91)

	'~>'           reduce using rule 82
	'='            reduce using rule 82
	'/='           reduce using rule 82
	'in'           shift, and enter state 48
	'('            shift, and enter state 45
	'['            reduce using rule 82
	']'            reduce using rule 82
	';'            reduce using rule 82
	%eof           reduce using rule 82


State 37

	BasicTerm -> STRING .                               (rule 88)

	'~>'           reduce using rule 88
	'=>'           reduce using rule 88
	'='            reduce using rule 88
	'/='           reduce using rule 88
	')'            reduce using rule 88
	'}'            reduce using rule 88
	'['            reduce using rule 88
	']'            reduce using rule 88
	','            reduce using rule 88
	';'            reduce using rule 88
	'|'            reduce using rule 88
	'|->'          reduce using rule 88
	'union'        reduce using rule 88
	%eof           reduce using rule 88


State 38

	BasicTerm -> INTLIT .                               (rule 85)

	'~>'           reduce using rule 85
	'=>'           reduce using rule 85
	'='            reduce using rule 85
	'/='           reduce using rule 85
	')'            reduce using rule 85
	'}'            reduce using rule 85
	'['            reduce using rule 85
	']'            reduce using rule 85
	','            reduce using rule 85
	';'            reduce using rule 85
	'|'            reduce using rule 85
	'|->'          reduce using rule 85
	'union'        reduce using rule 85
	%eof           reduce using rule 85


State 39

	BasicTerm -> HASKEXPR .                             (rule 84)

	'~>'           reduce using rule 84
	'=>'           reduce using rule 84
	'='            reduce using rule 84
	'/='           reduce using rule 84
	')'            reduce using rule 84
	'}'            reduce using rule 84
	'['            reduce using rule 84
	']'            reduce using rule 84
	','            reduce using rule 84
	';'            reduce using rule 84
	'|'            reduce using rule 84
	'|->'          reduce using rule 84
	'union'        reduce using rule 84
	%eof           reduce using rule 84


State 40

	%start_parseRuleTokens -> Rule .                    (rule 2)

	%eof           accept


State 41

	Rule -> 'rule' . STRING '[' Goals ']' '=>' '[' TermList ']'    (rule 41)

	STRING         shift, and enter state 47


State 42

	%start_parseTermTokens -> Term .                    (rule 1)
	Term -> Term . '~>' Term                            (rule 68)

	'~>'           shift, and enter state 46
	%eof           accept


State 43

	BasicTerm -> IDENT .                                (rule 82)
	BasicTerm -> IDENT . '(' TermArgs ')'               (rule 83)

	'~>'           reduce using rule 82
	'=>'           reduce using rule 82
	'='            reduce using rule 82
	'/='           reduce using rule 82
	'('            shift, and enter state 45
	')'            reduce using rule 82
	'}'            reduce using rule 82
	'['            reduce using rule 82
	']'            reduce using rule 82
	','            reduce using rule 82
	';'            reduce using rule 82
	'|'            reduce using rule 82
	'|->'          reduce using rule 82
	'union'        reduce using rule 82
	%eof           reduce using rule 82


State 44

	%start_parseProgramTokens -> Program .              (rule 0)

	%eof           accept


State 45

	BasicTerm -> IDENT '(' . TermArgs ')'               (rule 83)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	')'            reduce using rule 61
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	TermArgs       goto state 102
	TermArgList    goto state 87
	Term           goto state 88
	BigStepExpr    goto state 27
	Expr           goto state 28
	BasicTerm      goto state 29

State 46

	Term -> Term '~>' . Term                            (rule 68)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 101
	BigStepExpr    goto state 27
	Expr           goto state 28
	BasicTerm      goto state 29

State 47

	Rule -> 'rule' STRING . '[' Goals ']' '=>' '[' TermList ']'    (rule 41)

	'['            shift, and enter state 100


State 48

	Goal -> IDENT 'in' . Term                           (rule 91)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 99
	BigStepExpr    goto state 27
	Expr           goto state 28
	BasicTerm      goto state 29

State 49

	Term -> Term . '~>' Term                            (rule 68)
	Binding -> Term . '|->' Term                        (rule 78)

	'~>'           shift, and enter state 46
	'|->'          shift, and enter state 98


State 50

	Expr -> '[' Bindings . ']'                          (rule 72)

	']'            shift, and enter state 97


State 51

	Bindings -> Binding .                               (rule 76)
	Bindings -> Binding . ';' Bindings                  (rule 77)

	']'            reduce using rule 76
	';'            shift, and enter state 96


State 52

	Term -> Term . '~>' Term                            (rule 68)
	Elements -> Term .                                  (rule 80)
	Elements -> Term . ',' Elements                     (rule 81)

	'~>'           shift, and enter state 46
	')'            reduce using rule 80
	'}'            reduce using rule 80
	','            shift, and enter state 93


State 53

	Term -> '{' Elements . '}'                          (rule 70)

	'}'            shift, and enter state 95


State 54

	Term -> Term . '~>' Term                            (rule 68)
	Expr -> '(' Term . 'union' Term ')'                 (rule 74)
	Elements -> Term .                                  (rule 80)
	Elements -> Term . ',' Elements                     (rule 81)

	'~>'           shift, and enter state 46
	')'            reduce using rule 80
	','            shift, and enter state 93
	'union'        shift, and enter state 94


State 55

	BigStepExpr -> '(' Elements . ')' '⇓' '(' Elements ')'    (rule 71)

	')'            shift, and enter state 92


State 56

	Expr -> BasicTerm '[' . Bindings ']'                (rule 73)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	']'            reduce using rule 75
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 49
	BigStepExpr    goto state 27
	Expr           goto state 28
	Bindings       goto state 91
	Binding        goto state 51
	BasicTerm      goto state 29

State 57

	Goal -> Term '=' . Term                             (rule 92)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 90
	BigStepExpr    goto state 27
	Expr           goto state 28
	BasicTerm      goto state 29

State 58

	Goal -> Term '/=' . Term                            (rule 93)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	Term           goto state 89
	BigStepExpr    goto state 27
	Expr           goto state 28
	BasicTerm      goto state 29

State 59

	RewriteRule -> IDENT '(' . TermArgs ')' '=' Term    (rule 59)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	')'            reduce using rule 61
	'{'            shift, and enter state 33
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	TermArgs       goto state 86
	TermArgList    goto state 87
	Term           goto state 88
	BigStepExpr    goto state 27
	Expr           goto state 28
	BasicTerm      goto state 29

State 60

	RewriteType -> ':' IDENT . '(' TermArgs ')' '=>' Term    (rule 17)

	'('            shift, and enter state 85


State 61

	ImportDecl -> 'import' STRING .                     (rule 60)

	';'            reduce using rule 60


State 62

	TransitionDecl -> 'transition' IDENT . '~>' IDENT    (rule 58)

	'~>'           shift, and enter state 84


State 63

	SyntaxBlock -> 'syntax' '{' . SyntaxDecls '}'       (rule 18)

	'alias'        shift, and enter state 81
	'}'            reduce using rule 20
	IDENT          shift, and enter state 82
	HASKEXPR       shift, and enter state 83

	SyntaxDecls    goto state 77
	SyntaxDecl     goto state 78
	TypeRef        goto state 79
	IdentList      goto state 80

State 64

	SyntaxBlock -> 'syntax' IDENT . '{' SyntaxDecls '}'    (rule 19)

	'{'            shift, and enter state 76


State 65

	LatexBlock -> 'latex' '{' . LatexRules '}'          (rule 49)

	BOOL           shift, and enter state 31
	'('            shift, and enter state 32
	'{'            shift, and enter state 33
	'}'            reduce using rule 50
	'['            shift, and enter state 34
	'_'            shift, and enter state 35
	IDENT          shift, and enter state 43
	STRING         shift, and enter state 37
	INTLIT         shift, and enter state 38
	HASKEXPR       shift, and enter state 39

	LatexRules     goto state 73
	LatexRule      goto state 74
	Term           goto state 75
	BigStepExpr    goto state 27
	Expr           goto state 28
	BasicTerm      goto state 29

State 66

	RulesBlock -> 'rules' '{' . Rules '}'               (rule 37)

	'rule'         shift, and enter state 41
	'}'            reduce using rule 39

	Rules          goto state 71
	Rule           goto state 72

State 67

	RulesBlock -> 'rules' IDENT . '{' Rules '}'         (rule 38)

	'{'            shift, and enter state 70


State 68

	ProgramElement -> Declaration ';' .                 (rule 7)

	'rules'        reduce using rule 7
	'latex'        reduce using rule 7
	'syntax'       reduce using rule 7
	'transition'   reduce using rule 7
	'import'       reduce using rule 7
	':'            reduce using rule 7
	IDENT          reduce using rule 7
	HASKBLOCK      reduce using rule 7
	HASKPOST       reduce using rule 7
	%eof           reduce using rule 7


State 69

	ProgramElements -> ProgramElement ProgramElements .    (rule 6)

	%eof           reduce using rule 6


State 70

	RulesBlock -> 'rules' IDENT '{' . Rules '}'         (rule 38)

	'rule'         shift, and enter state 41
	'}'            reduce using rule 39

	Rules          goto state 131
	Rule           goto state 72

State 71

	RulesBlock -> 'rules' '{' Rules . '}'               (rule 37)

	'}'            shift, and enter state 130


State 72

	Rules -> Rule . ';' Rules                           (rule 40)

	';'            shift, and enter state 129


State 73

	LatexBlock -> 'latex' '{' LatexRules . '}'          (rule 49)

	'}'            shift, and enter state 128


State 74

	LatexRules -> LatexRule . ';' LatexRules            (rule 51)

	';'            shift, and enter state 127


State 75

	LatexRule -> Term . '=>' LatexTemplate              (rule 52)
	Term -> Term . '~>' Term                            (rule 68)

	'~>'           shift, and enter state 46
	'=>'           shift, and enter state 126


State 76

	SyntaxBlock -> 'syntax' IDENT '{' . SyntaxDecls '}'    (rule 19)

	'alias'        shift, and enter state 81
	'}'            reduce using rule 20
	IDENT          shift, and enter state 82
	HASKEXPR       shift, and enter state 83

	SyntaxDecls    goto state 125
	SyntaxDecl     goto state 78
	TypeRef        goto state 79
	IdentList      goto state 80

State 77

	SyntaxBlock -> 'syntax' '{' SyntaxDecls . '}'       (rule 18)

	'}'            shift, and enter state 124


State 78

	SyntaxDecls -> SyntaxDecl . ';' SyntaxDecls         (rule 21)

	';'            shift, and enter state 123


State 79

	SyntaxDecl -> TypeRef . MaybeProductions            (rule 23)

	'::='          shift, and enter state 122
	';'            reduce using rule 33

	MaybeProductionsgoto state 121

State 80

	SyntaxDecl -> IdentList . 'in' TypeRef MaybeProductions    (rule 24)

	'in'           shift, and enter state 120


State 81

	SyntaxDecl -> 'alias' . TypeRef 'as' IDENT          (rule 22)

	IDENT          shift, and enter state 119
	HASKEXPR       shift, and enter state 83

	TypeRef        goto state 118

State 82

	TypeRef -> IDENT .                                  (rule 25)
	TypeRef -> IDENT . '(' TypeRefs ')'                 (rule 26)
	IdentList -> IDENT .                                (rule 31)
	IdentList -> IDENT . ',' IdentList                  (rule 32)
